# Copyright 2023-2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "ink_stroke_modeler",
    version = "0.1.0",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.1",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "googletest",
    version = "1.14.0.bcr.1",
    dev_dependency = True,
    repo_name = "com_google_googletest",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_cc", version = "0.0.16")

# For fuzztest
bazel_dep(
    name = "re2",
    version = "2023-09-01",
    dev_dependency = True,
    repo_name = "com_googlesource_code_re2",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_proto",
    version = "7.0.2",
    dev_dependency = True,
)

non_module_deps = use_extension(
    "//:extensions.bzl",
    "non_module_dev_deps",
    dev_dependency = True,
)
use_repo(non_module_deps, "com_google_fuzztest")

# For Windows CC toolchains
cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")
