# Copyright 2023-2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(
    name = "abseil-cpp",
    version = "20250512.0",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "googletest",
    version = "1.17.0",
    dev_dependency = True,
    repo_name = "com_google_googletest",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_cc", version = "0.2.2")

# For fuzztest
bazel_dep(
    name = "re2",
    version = "2024-07-02.bcr.1",
    dev_dependency = True,
    repo_name = "com_googlesource_code_re2",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
    dev_dependency = True,
)
bazel_dep(
    name = "fuzztest",
    version = "20250805.0",
    dev_dependency = True,
    repo_name = "com_google_fuzztest",
)

# Similar for protobuf.
bazel_dep(name = "protobuf", version = "31.1")

# For toolchains
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "19.1.0")
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
