# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//ink_stroke_modeler:__subpackages__"],
)

licenses(["notice"])

cc_library(
    name = "internal_types",
    hdrs = ["internal_types.h"],
    deps = ["//ink_stroke_modeler:types"],
)

cc_library(
    name = "type_matchers",
    testonly = 1,
    srcs = ["type_matchers.cc"],
    hdrs = ["type_matchers.h"],
    deps = [
        ":internal_types",
        "//:gtest_for_library_testonly",
        "//ink_stroke_modeler:types",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "utils",
    hdrs = ["utils.h"],
    deps = ["//ink_stroke_modeler:types"],
)

cc_test(
    name = "utils_test",
    srcs = ["utils_test.cc"],
    deps = [
        ":type_matchers",
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "wobble_smoother",
    srcs = ["wobble_smoother.cc"],
    hdrs = ["wobble_smoother.h"],
    deps = [
        ":utils",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
    ],
)

cc_test(
    name = "wobble_smoother_test",
    srcs = ["wobble_smoother_test.cc"],
    deps = [
        ":type_matchers",
        ":wobble_smoother",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "position_modeler",
    hdrs = ["position_modeler.h"],
    deps = [
        ":internal_types",
        ":utils",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
    ],
)

cc_test(
    name = "position_modeler_test",
    srcs = ["position_modeler_test.cc"],
    deps = [
        ":internal_types",
        ":position_modeler",
        ":type_matchers",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "stylus_state_modeler",
    srcs = ["stylus_state_modeler.cc"],
    hdrs = ["stylus_state_modeler.h"],
    deps = [
        ":internal_types",
        ":utils",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
    ],
)

cc_test(
    name = "stylus_state_modeler_test",
    srcs = ["stylus_state_modeler_test.cc"],
    deps = [
        ":internal_types",
        ":stylus_state_modeler",
        ":type_matchers",
        "//ink_stroke_modeler:params",
        "//ink_stroke_modeler:types",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "validation",
    hdrs = ["validation.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "validaiton_test",
    srcs = ["validation_test.cc"],
    deps = [
        ":validation",
        "@com_google_googletest//:gtest_main",
    ],
)
